--- a/index.html
+++ b/index.html
@@ -421,29 +421,29 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-12" data-aos="fade-up">
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
-                        <ul class="list-unstyled text-black"></ul>
-                            <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
-                            </li>
+                        <!-- <ul class="list-unstyled text-black"></ul> -->
+                        <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
+                        </li>
 
-                            <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States
-                            </li>
+                        <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States
+                        </li>
 
-                            <li><b>Western Economic Association International (WEAI) Annual Conference (2023)</b>; Oral Presentation in Concurrent Session; San Diego (CA), the United States
-                            </li>
+                        <li><b>Western Economic Association International (WEAI) Annual Conference (2023)</b>; Oral Presentation in Concurrent Session; San Diego (CA), the United States
+                        </li>
 
-                            <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b>; Oral Presentation in Concurrent Session; Portland (ME), the United States
-                            </li>
+                        <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b>; Oral Presentation in Concurrent Session; Portland (ME), the United States
+                        </li>
 
-                            <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
-                            </li>
+                        <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
+                        </li>
 
-                            <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
-                            </li>
+                        <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
+                        </li>
 
-                        </ul>
+                        <!-- </ul> -->
                     </div>
                 </div>
             </div>
