--- a/index.html
+++ b/index.html
@@ -425,8 +425,9 @@
                     <div class="col-12">
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
                         <!-- <ul class="list-unstyled text-black"></ul> -->
-                        <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
-                        </li>
+                        <h2 class="h2 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States</h2>
+                        <!-- <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
+                        </li> -->
 
                         <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States
                         </li>
@@ -591,7 +592,7 @@
                 <div class="row">
                     <div class="col-12 mb-4 mb-lg-4" data-aos="fade-up">
                         <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-code"></span></div>
+                            <div class="unit-4-icon mr-4 mb-4 text-black"><span class="text-primary icon-code"></span></div>
                             <div>
                                 <!-- <h3>Programming Languages</h3> -->
                                 <p>Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p>
