--- a/index.html
+++ b/index.html
@@ -426,20 +426,14 @@
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
                         <!-- <ul class="list-unstyled text-black"></ul> -->
                         <h7 class="h7 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States</h7>
-                        <!-- <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
-                        </li> -->
 
-                        <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States
-                        </li>
+                        <h7 class="h7 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States</h7>
 
-                        <li><b>Western Economic Association International (WEAI) Annual Conference (2023)</b>; Oral Presentation in Concurrent Session; San Diego (CA), the United States
-                        </li>
+                        <h7 class="h7 mb-4 text-black"><b>Western Economic Association International (WEAI) Annual Conference (2023)</b>; Oral Presentation in Concurrent Session; San Diego (CA), the United States</h7>
 
-                        <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b>; Oral Presentation in Concurrent Session; Portland (ME), the United States
-                        </li>
+                        <h7 class="h7 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b>; Oral Presentation in Concurrent Session; Portland (ME), the United States</h7>
 
-                        <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
-                        </li>
+                        <h7 class="h7 mb-4 text-black"><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom</h7>
 
                         <!-- </ul> -->
                     </div>
@@ -505,49 +499,6 @@
             </div>
         </section> -->
 
-        <!-- <section class='site-section' id="research-section">
-            <div class="container">
-                <div class="row mb-5 justify-content-center">
-                    <div class="col-12 text-center" data-aos="fade-up">
-                        <h2 class="section-title mb-3">Research Projects</h2>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="">
-
-                        <div class="owl-carousel slide-one-item-alt">
-                            <img src="images/research_NV.jpg" alt="Image" class="img-fluid">
-                            <img src="images/research_iontrap.jpg" alt="Image" class="img-fluid">
-                        </div>
-                        <div class="custom-direction">
-                            <a href="#" class="custom-prev"><span><span class="icon-keyboard_backspace"></span></span></a><a href="#" class="custom-next"><span><span class="icon-keyboard_backspace"></span></span></a>
-                        </div>
-
-                    </div>
-                    <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
-
-                        <div class="owl-carousel slide-one-item-alt-text">
-                            <div>
-                                <h2 class="section-title mb-3">Diamond NV Center</h2>
-                                <p class="text-black">Development of multiple nuclear spin detection program in NV center system</p>
-                                <p><a href="https://www.iqslab.net/" class="text-grey">Integrated Quantum Systems Lab, SNU</a></p>
-                                <p><a href="https://www.nature.com/articles/s41598-020-71339-6" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
-                            </div>
-                            <div>
-                                <h2 class="section-title mb-3">Trapped-ion</h2>
-                                <p class="text-black">Constructed the RF voltage stabilizing system for trapped-ion qubits</p>
-                                <p><a href="https://sites.google.com/view/quantumcomputingatsnu" class="text-grey">Quantum Information and Quantum Computing Lab, SNU</a></p>
-                                <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
         <!-- <section class='site-section bg-light' id="honors-section">
             <div class="container">
                 <div class="row mb-5">
@@ -592,10 +543,11 @@
                 <div class="row">
                     <div class="col-12 mb-4 mb-lg-4" data-aos="fade-up">
                         <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4 text-black"><span class="text-primary icon-code"></span></div>
+                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-code"></span></div>
                             <div>
                                 <!-- <h3>Programming Languages</h3> -->
-                                <p>Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p>
+                                <h7 class="h7 mb-4 text-black">Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</h7>
+                                <!-- <p>Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p> -->
                             </div>
                         </div>
                     </div>
@@ -657,7 +609,7 @@
                 <div class="row mb-5">
 
                     <div class="col-md-4 text-center">
-                        <p class="mb-4">
+                        <p class="mb-4 text-black">
                             <span class="icon-room d-block h4 text-primary"></span>
                             <span>North Hall, Santa Barbara, CA, USA (93106)</span>
                         </p>
