--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
                         </figure>
                     </div>
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                        <div class="mb-4">
+                        <div class="mb-4 text-black">
                             <!-- <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3> -->
-                            <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</p>
+                            <h5 class="h5 mb-4 text-black">I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</h5>
+                            <!-- <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</p> -->
                         </div>
 
                         <!-- <div class="mb-4">
@@ -275,9 +276,9 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h5 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h5>
-                        <h5 class="h5 mb-4 text-black">Ph.D. Candidate in Economics</h5>
-                        <h5 class="h5 mb-4 text-black">M.A. in Economics, Aug 2021</h5>
+                        <h5 class="h5 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h5>
+                        <h6 class="h6 mb-4 text-black">Ph.D. Candidate in Economics</h6>
+                        <h6 class="h6 mb-4 text-black">M.A. in Economics, Aug 2021</h6>
                         <!-- <ul class="list-unstyled ul-check success"> -->
                             <!-- <li></li> -->
                         <!-- </ul> -->
@@ -296,7 +297,7 @@
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h5 class="h5 mb-4"><a href="https://www.business.kaist.edu/">Korea Advanced Institute of Science and Technology</a></h5>
-                        <h5 class="h5 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h5>
+                        <h6 class="h6 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h6>
                         <!-- <ul class="list-unstyled ul-check success"> -->
                             <!-- <li></li> -->
                         <!-- </ul> -->
@@ -315,7 +316,7 @@
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h5 class="h5 mb-4"><a href="https://www.yonsei.ac.kr/en_sc/index.jsp">Yonsei University</a></h5>
-                        <h5 class="h5 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h5>
+                        <h6 class="h6 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h6>
                         <!-- <ul class="list-unstyled ul-check success"> -->
                             <!-- <li></li> -->
                         <!-- </ul> -->
@@ -364,7 +365,7 @@
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h5 class="h5 mb-4"><a href="https://emlab.ucsb.edu/">U.S. Census Bureau</a></h5>
-                        <h5 class="h5 mb-4 text-black">Special Sworn Researcher</h5>
+                        <h6 class="h6 mb-4 text-black">Special Sworn Researcher</h6>
                         <!-- <ul class="list-unstyled ul-check success">         
                             <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
                         </ul> -->
@@ -383,7 +384,7 @@
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h5 class="h5 mb-4"><a href="https://emlab.ucsb.edu/">Environmental Markets Lab (emLab), UCSB</a></h5>
-                        <h5 class="h5 mb-4 text-black">Graduate Student Researcher</h5>
+                        <h6 class="h6 mb-4 text-black">Graduate Student Researcher</h6>
                         <!-- <ul class="list-unstyled ul-check success">         
                             <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
                         </ul> -->
@@ -402,7 +403,7 @@
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h5 class="h5 mb-4"><a href="https://minwoo-hyun.github.io/#experience-section">Sustainable Development Research Center, KAIST</a></h5>
-                        <h5 class="h5 mb-4 text-black">Research Associate</h5>
+                        <h6 class="h6 mb-4 text-black">Research Associate</h6>
                         <!-- <ul class="list-unstyled ul-check success">         
                             <li>Project Title: "Load Impact Evaluation for a Korean Peak Time Rebate Pilot with Residential and Small Commercial and Industrial Customers" (<a href="https://www.epri.com/research/products/000000003002016695">Technical Report</a>)</li>
                             <li>Project Title: "<a href="https://cordis.europa.eu/project/id/821471">Exploring National and Global Actions to reduce Greenhouse gas Emissions</a>"</li>
@@ -425,15 +426,15 @@
                     <div class="col-12">
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
                         <!-- <ul class="list-unstyled text-black"></ul> -->
-                        <h6 class="h6 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b><br>Oral Presentation; Cambridge (MA), the United States</h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b><br>Oral Presentation in Concurrent Session; Washington (DC), the United States</h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Western Economic Association International (WEAI) Annual Conference (2023)</b>; Oral Presentation in Concurrent Session; San Diego (CA), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>Western Economic Association International (WEAI) Annual Conference (2023)</b><br>Oral Presentation in Concurrent Session; San Diego (CA), the United States</h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b>; Oral Presentation in Concurrent Session; Portland (ME), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b><br>Oral Presentation in Concurrent Session; Portland (ME), the United States</h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom</h6>
+                        <h6 class="h6 mb-4 text-black"><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b><br>Oral Presentation in Long-Talk Session; London, the United Kingdom</h6>
 
                         <!-- </ul> -->
                     </div>
@@ -452,14 +453,14 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black">Fall 2020; Winter 2023:  <a>[ECON 10A] Intermediate Microeconomic Theory</a></h5>
-                        <h5 class="h5 mb-4 text-black">Winter 2021; Spring 2021:  <a>[ECON 2] Principles of Macroeconomics</a></h5>
+                        <h6 class="h6 mb-4 text-black"><a>[ECON 10A] Intermediate Microeconomic Theory (Fall 2020; Winter 2023)</a></h6>
+                        <h6 class="h6 mb-4 text-black"><a>[ECON 2] Principles of Macroeconomics (Winter 2021; Spring 2021)</a></h6>
                         <!-- <h3 class="h3 mb-4 text-black">2021 - 2022</h3> -->
-                        <h5 class="h5 mb-4 text-black">Fall 2021; Fall 2023; Spring 2024:  <a>[ECON 106] Managerial Economics</a></h5>
-                        <h5 class="h5 mb-4 text-black">Winter 2022; Spring 2022:  <a>[ECON 115] Environmental Economics</a></h5>
+                        <h6 class="h6 mb-4 text-black"><a>[ECON 106] Managerial Economics (Fall 2021; Fall 2023; Spring 2024)</a></h6>
+                        <h6 class="h6 mb-4 text-black"><a>[ECON 115] Environmental Economics (Winter 2022; Spring 2022)</a></h6>
                         <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
-                        <h5 class="h5 mb-4 text-black">Winter 2024:  <a>[ECON 150A] Labor Economics</a></h5>
-                        <h5 class="h5 mb-4 text-black">Summer 2024:  <a>[ECON 135] Monetary Economics</a></h5>
+                        <h6 class="h6 mb-4 text-black"><a>[ECON 150A] Labor Economics (Winter 2024)</a></h6>
+                        <h6 class="h6 mb-4 text-black"><a>[ECON 135] Monetary Economics (Summer 2024)</a></h6>
                     </div>
                 </div>
 
