--- a/index.html
+++ b/index.html
@@ -155,16 +155,20 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4 text-black">
                             <!-- <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3> -->
-                            <h5 class="h5 mb-4 text-black">I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</h5>
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">I am a fifth-year Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments. I will be on the 2025–26 academic job market.</h5>
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">Email: minwoohyun12[at]gmail.com</h5>
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;"><a href="https://scholar.google.co.kr/citations?user=U4vjKx8AAAAJ&hl=en&oi=ao">Google Scholar</a></h5>
                             <!-- <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</p> -->
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">CV</h5>
+                            <div style="display: flex; justify-content: center;">
+                                <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/preview?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
+                                </iframe>
+                            </div>
                         </div>
 
                         <!-- <div class="mb-4">
                             <ul class="list-unstyled ul-check success">
                                 <li>Quantum Computing Researcher</li>
-                                <li>Quantum Experiment Enthusiast</li>
-                                <li>Machine Learning Engineer</li>
-                                <li>UCSB Physics PhD Student</li>
                             </ul>
 
                         </div> -->
@@ -173,19 +177,13 @@
             </div>
         </div>
 
-        <section class="site-section bg-light" id="cv-section">
+        <!-- <section class="site-section bg-light" id="cv-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
                         <h2 class="section-title mb-3">CV</h2>
                     </div>
                 </div>
-
-                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="">
-                    Note: change 'view' or 'edit' into 'preview'
-                    <iframe src="https://drive.google.com/file/d/1R3EzDbOtK_uA2kF855zuQKRuw5aHT7y9/preview?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
-                    </iframe>
-                </div> -->
 
             </div>
 
@@ -194,7 +192,7 @@
                 </iframe>
             </div>
 
-        </section>
+        </section> -->
 
         <section class='site-section' id="wp-section">
             <div class="container">
@@ -533,74 +531,7 @@
             </div>
         </section> -->
 
-        <section class="site-section" id="skill-section">
-            <div class="container">
-                <div class="row mb-5">
-                    <div class="col-12 text-center" data-aos="fade up">
-                        <h2 class="section-title mb-3">Programming Skills</h2>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 mb-4 mb-lg-4" data-aos="fade-up">
-                        <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-code"></span></div>
-                            <div>
-                                <!-- <h3>Programming Languages</h3> -->
-                                <h7 class="h7 mb-4 text-black">Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</h7>
-                                <!-- <p>Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- <div class="row align-items-stretch">
-                    <div class="col-md-6 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-sitemap"></span></div>
-                            <div>
-                                <h3>Deep Learning Framework</h3>
-                                <p>PyTorch, TensorFlow</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-microchip"></span></div>
-                            <div>
-                                <h3>FPGA Construction</h3>
-                                <p>Xilinx Vivado, LabVIEW FPGA Module</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-joomla"></span></div>
-                            <div>
-                                <h3>Open Quantum System Simulation</h3>
-                                <p>Python Qutip, Qiskit Package</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <div class="unit-4">
-                            <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-gears"></span></div>
-                            <div>
-                                <h3>Instrumentation</h3>
-                                <p>Labber Device Driver, PyVISA, PyQt5</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div> -->
-            </div>
-        </section>
-
-
-        <section class="site-section bg-light" id="contact-section" data-aos="fade">
+        <!-- <section class="site-section bg-light" id="contact-section" data-aos="fade">
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-12 text-center">
@@ -621,16 +552,16 @@
                             <a href="tel:+821075509336">+1-805-971-1031</a>
                         </p>
                     </div> -->
-                    <div class="col-md-4 text-center">
+                    <!-- <div class="col-md-4 text-center">
                         <p class="mb-0">
                             <span class="icon-mail_outline d-block h4 text-primary"></span>
-                            <a href="mailto:minwoohyun12@gmail.com">minwoohyun12@gmail.com</a>
+                            <a href="mailto:minwoohyun12@gmail.com">minwoohyun12[at]gmail.com</a>
                         </p>
                     </div>
                 </div>
 
             </div>
-        </section>
+        </section> --> -->
 
 
         <footer class="site-footer">
